2007-09-24  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * added .cvsignore
        * gen_reflection: change to alloc_small
        * gen_uplinks added

        * started olmar version 2 development in subdir olmar
          - lives in parallel and harmony with the current olmar
            version
          - old version will be discontinued at some stage in the far
            future 
          - main differences:
            + astgen ast's are reflected into ocaml
            + reflection code generation is done in ocaml
            + reflection is controled by a config file (containing for
              instance renamings)
            + will work (eventually) with almost unchanged elsa sources
            + record types instead of tuples
            + most of the tedious code is generated as well
              (ast_accessors, superast, uplinks, ast_graph, ...)

        * added cvs revision in ast/ast.ast

2007-08-21  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * fixed superast local state problem
        * added iter_callees to cfg_util
        * modelcheck: use iter_callees to iterate over a complete call
          graph 
        
2007-08-20  Hendrik Tews  <tews@debian.lan>

        * second attempt for standard conversions

        Elsa:
        * merge conversion-branch changes
        * wrap now nontrivial conversions in E_stdConv nodes around the
          expression in Env::makeConvertedArg
        * ocaml reflection adopted
        * cc_ml_constructors: sorry for the noise, lots of white space
          changes because of delete-trailing-whitespace

        Asttools, cfg:
        * adoptions

2007-08-20  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * added cfg to toplevel Makfile

        Elsa:
        * added node CompilationUnit as top node to every ocaml ast

        Asttools/cfg:
        * adjustments

2007-08-17  Hendrik Tews  <tews@tandem.cs.ru.nl>

        CFG
        * add -sloppy option to ignore unimplemented things